changed text and added id

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>
+    <h1 id="header">
         <marquee>hello</marquee>
-        <marquee>line 2!!!!!!!!</marquee>
+        <marquee>hey there!!</marquee>
     </h1>
 </body>
 </html>
